# minefield

./: Cargo.toml  LICENSE  README.md  flake.nix
assets/: Sprite Sheet.aseprite
board_plugin/: Cargo.toml
board_plugin/src/: lib.rs
board_plugin/src/components/: coordinates.rs
board_plugin/src/resources/: tile_map.rs
nix/modules/: devshell.nix  rust.nix
src/: main.rs
