[package]
name = "minefield"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["board_plugin/debug", "bevy_inspector_egui"]

[dependencies]
#engine
bevy = "0.18.1"
bevy_inspector_egui = { package =  "bevy-inspector-egui", version = "0.36.0", optional = true }
board_plugin = { path = "board_plugin" }

[workspace]
members = [
  "board_plugin"
]
