[package]
name = "board_plugin"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["colored", "bevy_inspector_egui"]

[dependencies]
bevy = "0.18.1"
serde = "1.0.228"
rand = "0.8"
colored = { version = "3.1.1", optional = true }
bevy_inspector_egui = { package =  "bevy-inspector-egui", version = "0.36.0", optional = true }
